# klein-ported-to-rust

./: .gitignore  LICENSE  README.md  stable.nix
demos/: Cargo.toml
demos/examples/: druid_3d.rs  druid_3d_shapes.rs  flatland_aerial_reconnaissance.rs  spinning_tetrahedron.rs
demos/src/: main.rs
klein/: Cargo.toml  geometric_product.rs  lib.rs  line.rs  stable.nix
klein-ported/: Cargo.toml
klein-ported/src/: plane.rs  point.rs
klein-ported/src/detail/: mod.rs  sandwich.rs  sse.rs
klein/examples/: bad_example.rs  ganja_ripoff.rs  spinning_tetrahedron.rs  z_plane.rs
klein/src/: branch.rs  direction.rs  dual.rs  exp_log_sqrt.rs  geometric_product.rs  ideal_line.rs  inner_product.rs  join.rs  lib.rs  line.rs  mat4x4.rs  matrices.rs  meet.rs  motor.rs  plane.rs  point.rs  projection.rs  rotor.rs  translator.rs  util.rs
klein/src/detail/: exp_log.rs  exterior_product.rs  geometric_product.rs  inner_product.rs  matrix.rs  mod.rs  sandwich.rs  sse.rs
