[package]
name = "demos"
version = "0.1.0"
authors = ["dyaso <verdys@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
druid = { git = "https://github.com/linebender/druid.git" }
klein = { path = "../klein/" }

